[Mac] Fullscreen Toolbar Fixes

- Fixed the layout issues with the fullscreen toolbar
- Fixed the hiding animation

BUG=689115

Review-Url: https://codereview.chromium.org/2738043002
Cr-Commit-Position: refs/heads/master@{#456117}

Former-commit-id: e86cff1a78d3b1f75b454487afee3101d3504519