chrome/browser/ui/cocoa/browser_window_controller_private.mm
@@ -970,18 +970,10 @@ willPositionSheet:(NSWindow*)sheet
 - (void)updateSubviewZOrderFullscreen {
   base::scoped_nsobject<NSMutableArray> subviews([[NSMutableArray alloc] init]);
 
-  // The infobar should overlay the toolbar if the toolbar is fully shown.
-  FullscreenToolbarLayout layout = [fullscreenToolbarController_ computeLayout];
-  BOOL shouldInfoBarOverlayToolbar =
-      ui::IsCGFloatEqual(layout.toolbarFraction, 1.0);
-
   if ([downloadShelfController_ view])
     [subviews addObject:[downloadShelfController_ view]];
   if ([self tabContentArea])
     [subviews addObject:[self tabContentArea]];
-
-  if (!shouldInfoBarOverlayToolbar && [infoBarContainerController_ view])
-    [subviews addObject:[infoBarContainerController_ view]];
 
   if ([self placeBookmarkBarBelowInfoBar]) {
     if ([bookmarkBarController_ view])
@@ -998,7 +990,7 @@ willPositionSheet:(NSWindow*)sheet
   if ([toolbarController_ view])
     [subviews addObject:[toolbarController_ view]];
 
-  if (shouldInfoBarOverlayToolbar && [infoBarContainerController_ view])
+  if ([infoBarContainerController_ view])
     [subviews addObject:[infoBarContainerController_ view]];
 
   if ([findBarCocoaController_ view])
