chrome/browser/ui/cocoa/fullscreen/fullscreen_toolbar_animation_controller.mm
@@ -78,7 +78,7 @@ void FullscreenToolbarAnimationController::AnimateToolbarOutIfPossible() {
   if (animation_.IsClosing())
     return;
 
-  animation_.Reset(animation_start_value_);
+  animation_.Stop();
   animation_.Hide();
 }
 
