chrome/browser/ui/cocoa/browser_window_controller_browsertest.mm
@@ -778,14 +778,12 @@ IN_PROC_BROWSER_TEST_F(BrowserWindowControllerTest,
   // Insert a NTP new tab in the foreground.
   AddTabAtIndex(0, GURL("about:blank"), ui::PAGE_TRANSITION_LINK);
   ASSERT_TRUE([[controller() toolbarController] isLocationBarFocused]);
-  EXPECT_FALSE([fullscreenToolbarController isRevealingToolbarForTabstrip]);
+  EXPECT_TRUE([fullscreenToolbarController isRevealingToolbarForTabstrip]);
   [fullscreenToolbarController resetToolbarFlag];
 
-  // Insert a new tab in the background. The animation should not be triggered
-  // since the location bar should still be focused.
   AddTabAtBackground(1, GURL("http://google.com"));
   ASSERT_TRUE([[controller() toolbarController] isLocationBarFocused]);
-  EXPECT_FALSE([fullscreenToolbarController isRevealingToolbarForTabstrip]);
+  EXPECT_TRUE([fullscreenToolbarController isRevealingToolbarForTabstrip]);
   [fullscreenToolbarController resetToolbarFlag];
 
   // Switch to a non-NTP tab.
